--- a/app/globals.css
+++ b/app/globals.css
@@ -1655,3 +1655,5 @@ a[x-apple-data-detectors], a[href^="tel:"], a[href^="mailto:"], a[href^="sms:"] 
   .printsheet .bs-val { padding-top: 2px !important; padding-bottom: 2px !important; font-size: 0.94em !important; }
   @page { margin: 6.5mm; } /* careful drop from 7mm */
 }
+
+.printsheet .col-2 { grid-column: span 2; }
